--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+*{
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box !important;
+}
+.heading h2{
+color: #3b99e0 
+}
+.summary{
+    border-top: 3px solid #5ea4f3;
+    background-color: #f7fbff ;  
+}
+span{
+    display: block;
+}
+div.button button{
+    width: 100%;
+
+}
+div.products input{
+    width: 4rem;
+    text-align: center;
+}
+.product-1 div{
+    
+    align-items: center; 
+}
